<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!--
These are the same for all languages. When translating,
delete these from your file.
    -->
    <string name="app_name">Carat</string>
    <string name="version_name">1.0</string>
       
    <string name="jsna">N/A</string>
    <string name="fake_id">0</string>
    <string name="fake_os">4.0.3</string>
    <string name="fake_device">Samsung Galaxy Nexus</string>

    <color name="brown">#744618</color>
    <color name="black">#000000</color>
    <color name="with">#f3b14d</color>
    <color name="without">#007777</color>

    <string name="blackBackground">false</string>

    <color name="background">#FFFFFFFF</color>
    <color name="text">#000000</color>

    <string name="zeroh">0h 0m 0s</string>
    <string name="zero">0</string>
    <string name="benefitdefault">1d 9h 15m 40s</string>
    <!-- <string name="confidence">Confidence:</string> -->

    <!-- These will be different -->
    
    <string name="jscore">Your J-Score:</string>
    <string name="batterylife">Active Battery Life:</string>
    <string name="caratid">Carat ID:</string>
    <string name="osver">OS version:</string>
    <string name="dev">Device model:</string>
    <string name="running_apps">Running apps:</string>
    <string name="memused">Memory used:</string>
    <string name="memactive">Memory active:</string>
    <string name="cpu">CPU Usage:</string>
    <string name="updated0">(Updated 0m 0s ago)</string>
    <string name="viewprocess">View Process List</string>
    <string name="alogo">AmpLab Logo</string>
    <string name="ulogo">University of Helsinki Logo</string>
    <string name="moreinfo">More Information</string>
    <string name="appicon">App Icon</string>
    <string name="default_type">Foreground App</string>

    <string name="emptySuggestion">Nothing to report yet!</string>
    <string name="checkback">Please check back later.</string>
    <string name="checkback2">If you just started using Carat, we will need time to collect the necessary data: sometimes a week or more. Please check back later. Meanwhile, we\'ll be hard at work trying to figure out what\'s going on with your battery life&#8230;</string>
    <string name="checkback3">For best results, open Carat once a day for a week.</string>
    <string name="emptyBugsOnly">You have no bugs.</string>
    <string name="checkbackEmptyBugs">Please check back in a week.</string>
    <string name="checkbackEmptyBugs2">If your apps are behaving normally, there will be no bugs here.</string>
    <string name="checkbackEmptyBugs3">When an app starts to use significantly more energy on your device than on others, it will show up here.</string>
   
    <string name="copied">Copied:</string>
    <string name="helpcarat">Help Carat collect data</string>
    <string name="questionnaire">Please help us improve Carat</string>
    <string name="questionnaire2">Answer a questionnaire (takes 5&#8211;10 minutes)</string>
    <string name="feedback">Give feedback (email)</string>
    <string name="share">Share …</string>
    <string name="sharewith">Share with:</string>
    <string name="chooseemail">Choose email application</string>
    <string name="feedbackfrom">Feedback from a</string>
    <string name="sharetext1">Carat is improving my battery life. My J-Score is</string>
    <string name="sharetext2">!\nWhat\'s yours?\nFind out here: \nhttp://carat.cs.berkeley.edu/</string>
    <string name="myjscoreis">My J-Score is</string>
    <string name="appmanager">App Manager</string>
    
    <!-- Navigation drawer items (tabs) -->
    <string-array name="drawer_items">
        <item>Summary</item>
        <item>Actions</item>
        <item>My Device</item>
        <item>Bugs</item>
        <item>Hogs</item>
        <item>Carat Settings</item>
        <item>About</item>
    </string-array>
    
    <!-- Updating etc -->

    <string name="samplesreported">Samples reported</string>
    <string name="updating">Updating</string>
    <string name="updated">(Updated </string>
    <string name="ago">ago)</string>
    <string name="neverupdated">(Never updated)</string>
    <string name="updatedjustnow">(Updated just now)</string>
    <string name="didntget">got no</string>
    <string name="updatingreports">Updating reports</string>
    <string name="blacklist">Blacklist</string>
    <string name="finishing">Finishing up</string>

    <string name="expected">Expected improvement:</string>
    <string name="killappname">Kill App Name</string>
    <string name="appname">App Name</string>
    <string name="priority">Priority:</string>
    <string name="priorityDefault">Not running</string>
    <string name="prioritynotrunning">Not running</string>
    <string name="priorityforeground">Foreground App</string>
    <string name="prioritybackground">Background App</string>
    <string name="priorityservice">Service</string>
    <string name="priorityperceptible">Perceptible App</string>
    <string name="priorityvisible">Visible App</string>
    <string name="prioritysuggestion">Suggestion</string>

    <!-- Settings screen related -->

    <string name="bluetoothsettings">Bluetooth Settings</string>
    <string name="wifisettings">Wifi Settings</string>
    <string name="screensettings">Screen Settings</string>
    <string name="soundsettings">Sound Settings</string>
    <string name="locationsettings">Location Settings</string>
    <string name="syncsettings">Sync Settings</string>
    <string name="mobilenetworksettings">Mobile Network Settings</string>
    <string name="appsettings">App Settings</string>
    <string name="opening">Opening </string>
    <string name="notsupported">is not supported on this device, sorry.</string>

    <!-- Actions -->

    <string name="kill">Kill</string>
    <string name="killed">killed</string>
    <string name="restart">Restart</string>
    <string name="osupgrade">Upgrade the OS</string>
    <string name="information">Information</string>
    <string name="unknown">Unknown</string>
    <string name="dimscreen">Dim the Screen</string>
    <string name="disablewifi">Disable Wifi</string>
    <string name="disablebluetooth">Disable Bluetooth</string>
    <string name="automaticbrightness">Set brightness to automatic</string>
    <string name="disablenetwork">Disable network</string>
    <string name="disablehapticfeedback">Disable haptic feedback</string>
    <string name="disablevibration">Disable vibration</string>
    <string name="disablegps">Disable GPS</string>
    <string name="disablelocation">Disable location services</string>
    <string name="shortenscreentimeout">Shorten screen timeout</string>
    <string name="disableautomaticsync">Disable automatic sync</string>

    <!-- Detail view -->

    <string name="runninghere">running here</string>
    <string name="runningelsewhere">running elsewhere</string>
    <string name="running">running</string>
    <string name="notrunning">not running</string>
    <string name="onmodel">On</string>
    <string name="onothermodels">On other models</string>
    <string name="withos">With</string>
    <string name="withotheroses">With other OS</string>
    <string name="withsimilarapps">With similar apps</string>
    <string name="withdifferentapps">With different apps</string>
    <string name="model">Model</string>
    <string name="os">OS</string>
    <string name="similarapps">Similar Apps</string>
    <string name="wifionly">Use WiFi only</string>
    <string name="wifionlyused">Using WiFi only</string>
    <string name="samples">Samples:</string>
    <string name="samplesWithout">Samples without:</string>
    <string name="error">Error:</string>
    <string name="significance">Significance:</string>
    <string name="best">Already best</string>
    
    <!-- The pie chart -->
    <string name="chart_wellbehaved">Well-behaved</string>
    <string name="chart_hogs">Hogs</string>
    <string name="chart_bugs">Bugs</string>
    
    <!-- The dialog to enable Internet -->
    <string name="dialog_text">Carat needs an Internet connection to update your personalized reports.</string>
    <string name="dialog_enable">Enable Wifi</string>
    <string name="dialog_cancel">Cancel</string>
    
    <!-- error messages -->
    <string name="connection_error">Offline. Click to turn on Wifi.</string>
    
    <!-- Navigation Drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="summary_unavailable_title">Nothing to show yet</string>
    <string name="summary_unavailable_text">This screen will be updated as soon as the data is received from server.</string>
    <string name="summary_your_device_has">Your device has</string>
    <string name="summary_others_have">Other users have:</string>
    <string name="summary_conjunction">and</string>
    <string name="summary_screen_title">Carat Statistics</string>
    <string name="summary_android_apps">Android Apps</string>
    <string name="summary_chart_center_text">Android\nApps</string>
    <string name="hogs">Hogs</string>
    <string name="bugs">Bugs</string>
    <string name="morestatsat">More at carat.cs.helsinki.fi/statistics</string>
    <!-- Does not need translation -->
    <string name="statsurl">http://carat.cs.helsinki.fi/statistics/</string>
    
    <!-- Carat settings screen -->
    <!-- switch backport strings -->
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="summary_off">Wifi + Mobile Data</string>
    <string name="summary_on">Wifi Only</string>

    <!-- New screen titles -->
    <string name="memoryinfo">Memory Information</string>
    <string name="batterylifeinfo">Active Battery Life</string>
    <string name="jscoreinfo">What is a J-Score?</string>
    <string name="collectdatainfo">Help Carat collect data</string>
    <string name="upgradeosinfo">Upgrading the OS</string>
    <string name="deviceinfo">About this device</string>
    <string name="osinfo">About this OS version</string>
    <string name="processlist">Running processes</string>
</resources>


<!--  <item>App Recommendation</item>  
	  <string name="action_websearch">Search</string> -->