<?xml version="1.0" encoding="utf-8"?>
<!-- Color set for the GUI designer -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="horizontal"
    android:paddingBottom="5dip"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:paddingTop="5dip" >

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="11dip"
        android:contentDescription="@string/appicon"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/appname"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

           <TextView
                android:id="@+id/benefitLegend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/expected"
                android:textColor="@color/cyan" />

            <TextView
                android:id="@+id/benefit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/benefitdefault"
                android:textColor="@color/cyan" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/moreinfo"
        android:layout_width="18dip"
        android:layout_height="18dip"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dip"
        android:background="@null"
        android:contentDescription="@string/moreinfo"
        android:src="@drawable/arrow" />

</LinearLayout>