<?xml version="1.0" encoding="utf-8"?>
<!-- Color set for the GUI designer -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="@color/background"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:paddingBottom="10dip"
    android:paddingTop="10dip">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/actionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/killappname"
            android:layout_gravity="left"
            android:textColor="@color/brown" />
        
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/benefitLegend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/expected"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/expectedBenefit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/benefitdefault"
                android:textColor="@color/green" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/moreinfo"
        android:layout_width="18dip"
        android:layout_height="18dip"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dip"
        android:background="@null"
        android:contentDescription="@string/moreinfo"
        android:src="@drawable/arrow" />

</LinearLayout>
