<?xml version="1.0" encoding="utf-8"?>
<!-- Color set for the GUI designer -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="@color/background"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:paddingBottom="10dip"
    android:paddingTop="10dip">
    
    <ImageView android:id="@+id/app_icon"
    android:layout_width="@android:dimen/app_icon_size"
    android:layout_height="@android:dimen/app_icon_size"
    android:layout_marginRight="11dip"
    android:layout_gravity="center_vertical"
    android:src="@drawable/ic_launcher"
    android:contentDescription="@string/appicon"
    android:scaleType="fitCenter"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/processName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/appname"
            android:layout_gravity="left"
            android:textColor="@color/brown" />
        
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/priorityLegend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/priority"
                android:textColor="@color/brown" />

            <TextView
                android:id="@+id/processPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/priorityDefault"
                android:textColor="@color/brown" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
