<?xml version="1.0" encoding="utf-8"?>
<!-- Color set for the GUI designer -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="5dip"
    android:paddingTop="5dip" >
    
    <LinearLayout
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dip"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">

    <ImageView
        android:id="@+id/suggestion_app_icon"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="11dip"
        android:contentDescription="@string/appicon"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/actionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/killappname"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/brown" />

         <TextView
                android:id="@+id/suggestion_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/default_type"
                android:textColor="@color/brown" />
         
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/benefitLegend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/expected"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/expectedBenefit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/benefitdefault"
                android:textColor="@color/green" />
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    
    <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#77000000"
            android:layout_marginBottom="5dip"/>
    
    
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="1dip"
            android:paddingLeft="8dip"
        android:paddingRight="8dip">
    <Button
        android:id="@+id/killButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="Kill App X" android:layout_weight="1"/>
    
    <Button
        android:id="@+id/appManager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/appmanager" android:layout_weight="1"/>
    
    </LinearLayout>
    
     <View android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#77000000"
            />

    <WebView
        android:id="@+id/killView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>