<?xml version="1.0" encoding="utf-8"?>
<!-- Color set for the GUI designer -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="5dip"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:paddingTop="5dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="11dip"
            android:contentDescription="@string/appicon"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/appname"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/brown" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/confidenceLegend"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left|center_vertical"
                    android:text="@string/confidence"
                    android:textColor="@color/green" />

                <ProgressBar
                    android:id="@+id/confidenceBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center_vertical"
                    android:layout_weight="1"
                    android:progress="50" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/moreinfo"
            android:layout_width="18dip"
            android:layout_height="18dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dip"
            android:background="@null"
            android:contentDescription="@string/moreinfo"
            android:src="@drawable/arrow" />
    </LinearLayout>

            <TextView
                android:id="@+id/killBenefitLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expected"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/killBenefit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dip"
                android:text="@string/zeroh"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/samplesLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/samples"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/samples"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dip"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/errorLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/error"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dip"
                android:text="@string/zeroh"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/green" />
         <TextView
                android:id="@+id/samplesWoLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/samplesWithout"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/samplesWo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dip"
                android:text="@string/zero"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/green" />
            <!--<TextView
                android:id="@+id/errorWoLegend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/error"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/green" />

             <TextView
                android:id="@+id/errorWo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dip"
                android:text="@string/zeroh"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/green" />-->
  </LinearLayout>
</ScrollView>